// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swiper Swiper swiperVue demo works fine 1`] = `
<div
  class="tdesign-demo-block--swiper"
>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__swiper-wrap--horizontal"
        style="width: 0%; transform: translate3d(NaN%,0,0); transition: transform 0.3s;"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__trigger-wrap"
    >
      
      
    </ul>
  </div>
  <div
    class="t-swiper"
  >
    <div
      class="t-swiper__content"
    >
      <div
        class="t-swiper__swiper-wrap--horizontal"
        style="width: 0%; transform: translate3d(NaN%,0,0); transition: transform 0.5s;"
      >
        
        
      </div>
    </div>
    <ul
      class="t-swiper__trigger-wrap"
    >
      
      
    </ul>
  </div>
</div>
`;

exports[`Swiper Swiper verticalVue demo works fine 1`] = `
<div
  class="t-swiper"
>
  <div
    class="t-swiper__content"
  >
    <div
      class="t-swiper__swiper-wrap--vertical"
      style="height: 0%; transform: translate3d(0,NaN%,0); transition: transform 0.3s;"
    >
      
      
    </div>
  </div>
  <ul
    class="t-swiper__trigger-wrap"
  >
    
    
  </ul>
</div>
`;
